# topcom

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  apply_patches.sh  config.status  configure  configure.ac  configure.in  libtool  mkinstalldirs
doc/: manual.tex
doc/CVS/: Entries  Repository  Root
examples/: DkxDl.results  Makefile  Makefile.am  Makefile.in  cube_3.dump.0  cube_3.dump.1  cyclic_13_6.result  log_cyclic_8_4.read.out  moae.chiro_computationtree
examples/CVS/: Entries  Repository  Root
lib-src/: Array.hh  Circuits.cc  Circuits.hh  Cocircuits.cc  Cocircuits.hh  CommandlineOptions.cc  CommandlineOptions.hh  CompressedIntegerSet.hh  ComputeTriangs.cc  Facets.cc  Facets.hh  Field.hh  FineTriang.cc  Flip.cc  Flip.hh  HashKey.hh  IntegerSet.hh  InteriorFacets.cc  Makefile  Makefile.am  Makefile.in  MarkedFlips.hh  Matrix.cc  Matrix.hh  Permutation.cc  Permutation.hh  PlacingTriang.cc  PlacingTriang.hh  PlainArray.hh  PlainHashIndexTable.hh  PlainHashMap.hh  PlainHashSet.hh  PlainHashTable.hh  PointConfiguration.cc  PointConfiguration.hh  RealChiro.cc  RealChiro.hh  RefCount.hh  SimplicialComplex.hh  SimplicialComplexTemplate_Definitions.hh  (+14 more)
lib-src-reg/: LPinterface.cc  LPinterface.hh  Makefile  Makefile.am  Makefile.in  SPXinterface.cc  config.h.in
m4/: cddlib-check.m4
patches/: configure.ac
src/: Makefile  Makefile.am  Makefile.in  bench.cc  cocircuits2facets.cc  points2facets.cc
src-reg/: Makefile  Makefile.am  Makefile.in
wrap-gmp-gcc3/: Integer.cc  Integer.h  Makefile.am  Makefile.in  Rational.cc  Rational.h  gmp_init.cc  gmp_init.h  tweaks.h
wrap-gmp-gcc4/: Integer.cc  Integer.h  Makefile.am  Makefile.in  Rational.cc  Rational.h  gmp_init.cc  gmp_init.h
wrap-gmp-gmpxx/: Makefile  Makefile.am  Makefile.in  Rational.h
